# IPC

./: CMakeLists.txt  README.md  batch.py  c3d_batch.py
cmake/: IPCDependencies.cmake  IPCDownloadExternal.cmake
input/: scaled.txt  unscaled.txt
input/tetMeshes/: ipc_test.msh
ipc/: Mesh.cpp  Mesh.hpp  main.cpp
ipc/TimeStepper/: Optimizer.cpp  Optimizer.hpp
ipc/proto/: CMakeLists.txt  ipc_io.proto
src/: Config.cpp  Config.hpp
src/CollisionObject/: SelfCollisionHandler.cpp  SelfCollisionHandler.hpp
src/TimeStepper/: Optimizer.cpp  Optimizer.hpp
