include(FindProtobuf)
find_package(Protobuf REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIR})
protobuf_generate_cpp(PROTO_SRC PROTO_HEADER ipc_io.proto)
message(STATUS "Proto inc: ${Protobuf_INCLUDE_DIRS}")
message(STATUS "Proto lib: ${Protobuf_LIBRARY}")
message(STATUS "ipc proto headers: ${PROTO_HEADER}")
message(STATUS "ipc proto srcs: ${PROTO_SRC}")
add_library(proto ${PROTO_HEADER} ${PROTO_SRC})